# Facilita-Projeto-Zonas-Manejo

./: .env.example  .gitignore  Dockerfile  README copy.md  README.md  docker-compose.yml  pyproject.toml
api/: main.py
config_examples/: config_auto.json  config_hotspot_library.json  config_hotspot_target.json  config_template.json  config_threshold.json  config_threshold_dry_run.json
core/: alignment.py  blob_urls.py  classification_auto.py  classification_hotspot.py  classification_threshold.py  io.py  logger.py  models.py  pipeline.py  polygonize.py  publish.py  smoothing.py  statistics.py  threshold_preview.py  vector_postprocess.py
