[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zonas-manejo"
version = "0.1.0"
description = "Pipeline e API para geração de zonas de manejo (threshold, auto e hotspot)."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Facilita Agro / Zonas de Manejo Pipeline" }
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "geopandas>=0.14",
    "rasterio>=1.3",
    "shapely>=2.0",
    "topojson>=1.9",
    "pyproj>=3.5",
    "fiona>=1.9"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*"]
